--- a/index.html
+++ b/index.html
@@ -9,13 +9,23 @@
 </head>
 <body>
   <header>
-    <h1>Watches for Anna!!! - Pick the watches you like</h1>
+    <h1>Watches for Anna - Day 1 - Pick the watches you like</h1>
   </header>
   <section>
     <div class="cardcontainer list">
       <ul class="cardlist">
-    <li class="card current"><img src="http://img.zap.co.il/pics/2/5/4/7/39417452c.gif" alt=""></li>
-    <li class="card"><img src="http://img.zap.co.il/pics/1/7/9/6/38296971c.gif" alt=""></li>
+    <li class="card current"><img src="http://img.zap.co.il/pics/2/5/4/7/39417452c.gif" alt="Michael Kors MK3191"></li>
+    <li class="card"><img src="http://img.zap.co.il/pics/1/7/9/6/38296971c.gif" alt="Casio LA670WGA"></li>
+    <li class="card"><img src="http://img.zap.co.il/pics/6/3/1/9/37789136c.gif" alt="Michael Kors MK5735"></li>
+    <li class="card"><img src="http://img.zap.co.il/pics/4/5/9/4/39314954c.gif" alt="Michael Kors MK5893"></li>
+    <li class="card"><img src="http://img.zap.co.il/pics/3/9/5/9/40469593c.gif" alt="Rado R48744163"></li>
+    <li class="card"><img src="http://img.zap.co.il/pics/4/3/3/1/39101334c.gif" alt="Michael Kors MK5894"></li>
+    <li class="card"><img src="http://img.zap.co.il/pics/2/0/5/9/40379502c.gif" alt="Michael Kors MK6119"></li>
+    <li class="card"><img src="http://img.zap.co.il/pics/9/1/5/7/40027519c.gif" alt="Michael Kors MK5955"></li>
+    <li class="card"><img src="http://img.zap.co.il/pics/5/4/0/3/39203045c.gif" alt="Dkny NY2170"></li>
+    <li class="card"><img src="http://img.zap.co.il/pics/5/3/3/1/39101335c.gif" alt="Michael Kors MK5896"></li>
+    <li class="card"><img src="http://img.zap.co.il/pics/1/2/6/2/37052621c.gif" alt="Michael Kors MK5605"></li>
+    <li class="card"><img src="http://d2ydh70d4b5xgv.cloudfront.net/images/2/2/casio-general-two-tone-stainless-steel-ladies-watch-ltp-1129g-7a-c0e405c4b7e7c7cc5287c58b8dae0ec4.jpg" alt="Casio LTP1129G-7B"></li>
       </ul>
       <button class="but-nope">X</button>
       <button class="but-yay">✔</button>
